[gd_scene load_steps=89 format=2]

[ext_resource path="res://banlon_endless_mode.gd" type="Script" id=1]
[ext_resource path="res://road.png" type="Texture" id=2]
[ext_resource path="res://pixel.png" type="Texture" id=3]
[ext_resource path="res://Vgg_font-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://car_move.gd" type="Script" id=5]
[ext_resource path="res://ship.png" type="Texture" id=6]
[ext_resource path="res://pixel_crotch.png" type="Texture" id=7]
[ext_resource path="res://pixel_arm.png" type="Texture" id=8]
[ext_resource path="res://pixel_torso.png" type="Texture" id=9]
[ext_resource path="res://outer_box.png" type="Texture" id=10]
[ext_resource path="res://inner_box.png" type="Texture" id=11]
[ext_resource path="res://banlon.ogg" type="AudioStream" id=12]
[ext_resource path="res://error_box.png" type="Texture" id=13]
[ext_resource path="res://button.png" type="Texture" id=14]

[sub_resource type="RectangleShape2D" id=49]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="DynamicFont" id=50]

size = 45
use_mipmaps = false
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="Curve2D" id=51]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 114.878, 13.1073, 0, 0, 0, 0, -68.3969, 14.7142 )
}

[sub_resource type="RectangleShape2D" id=52]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="DynamicFont" id=48]

size = 45
use_mipmaps = false
use_filter = true
font_data = ExtResource( 4 )

[node name="banlon_time_management" type="Node2D"]

position = Vector2( 512.427, 305.957 )
scale = Vector2( 16.0521, 9.53588 )
script = ExtResource( 1 )

[node name="road" type="Sprite" parent="."]

position = Vector2( -0.0378055, 13.9477 )
scale = Vector2( 0.107414, 0.0815477 )
texture = ExtResource( 2 )

[node name="road1" type="Sprite" parent="."]

position = Vector2( 0.0560946, -1.14441 )
scale = Vector2( 0.107414, 0.0815477 )
texture = ExtResource( 2 )

[node name="road2" type="Sprite" parent="."]

position = Vector2( 0.183837, -15.9818 )
scale = Vector2( 0.107414, 0.0815477 )
texture = ExtResource( 2 )

[node name="frog" type="RigidBody2D" parent="."]

position = Vector2( 27.4582, 27.5923 )
scale = Vector2( 0.0587697, 0.0943734 )
input_pickable = false
shapes/0/shape = SubResource( 49 )
shapes/0/transform = Transform2D( 3.2461, 0, 0, 3.13172, -0.510986, -0.297302 )
shapes/0/trigger = false
collision_layer = 1
collision_mask = 1
mode = 0
mass = 1.0
friction = 0.0
bounce = 0.0
gravity_scale = 0.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 100
contact_monitor = true
sleeping = false
can_sleep = true
linear_velocity = Vector2( 0, 0 )
angular_velocity = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="frog"]

position = Vector2( -0.510986, -0.297302 )
scale = Vector2( 3.2461, 3.13172 )
shape = SubResource( 49 )
trigger = false
_update_shape_index = 0

[node name="frog 2" type="Sprite" parent="frog"]

position = Vector2( -1.16406, 3.58954 )
scale = Vector2( 1.40021, 1.28935 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="jump_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.8
one_shot = true
autostart = false

[node name="note_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false

[node name="notification" type="RichTextLabel" parent="."]

visible = false
rect_scale = Vector2( 0.075, 0.075 )
focus_ignore_mouse = false
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 2
margin_left = -29.0
margin_top = -30.0
margin_right = 475.0
margin_bottom = 23.0
custom_fonts/normal_font = SubResource( 50 )
custom_colors/default_color = Color( 0.623529, 0.823529, 1, 1 )
bbcode_enabled = false
bbcode_text = "You made it!"
visible_characters = -1
percent_visible = 1.0

[node name="Path2D" type="Path2D" parent="."]

curve = SubResource( 51 )
__meta__ = {
"_edit_lock_": true
}

[node name="car_path_follow" type="PathFollow2D" parent="Path2D"]

position = Vector2( 114.878, 13.1073 )
rotation_deg = 179.201
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = false
cubic_interp = true
loop = true
lookahead = 4.0
script = ExtResource( 5 )

[node name="StaticBody2D" type="StaticBody2D" parent="Path2D/car_path_follow" groups=[
"car",
]]

position = Vector2( 50.449, -0.46712 )
scale = Vector2( 0.161721, 0.117178 )
input_pickable = true
shapes/0/shape = SubResource( 52 )
shapes/0/transform = Transform2D( 3.18409, -5.21541e-08, 2.98023e-08, 3.17449, -0.251343, 0.646301 )
shapes/0/trigger = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="car3" type="Sprite" parent="Path2D/car_path_follow/StaticBody2D"]

position = Vector2( -4.09009, 1.14368 )
rotation_deg = 90.0
scale = Vector2( 0.990265, 0.924191 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Path2D/car_path_follow/StaticBody2D"]

position = Vector2( -0.251343, 0.646301 )
rotation_deg = -5.37896e-07
scale = Vector2( 3.18409, 3.17449 )
shape = SubResource( 52 )
trigger = false
_update_shape_index = 0
__meta__ = {
"_edit_lock_": true
}

[node name="StaticBody2D1" type="StaticBody2D" parent="Path2D/car_path_follow" groups=[
"car",
]]

position = Vector2( 81.3252, 0.530422 )
scale = Vector2( 0.161721, 0.117178 )
input_pickable = true
shapes/0/shape = SubResource( 52 )
shapes/0/transform = Transform2D( 3.18409, -5.21541e-08, 2.98023e-08, 3.17449, -0.251343, 0.646301 )
shapes/0/trigger = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="car3" type="Sprite" parent="Path2D/car_path_follow/StaticBody2D1"]

position = Vector2( -4.09009, 1.14368 )
rotation_deg = 90.0
scale = Vector2( 0.990265, 0.924191 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Path2D/car_path_follow/StaticBody2D1"]

position = Vector2( -0.251343, 0.646301 )
rotation_deg = -5.37896e-07
scale = Vector2( 3.18409, 3.17449 )
shape = SubResource( 52 )
trigger = false
_update_shape_index = 0
__meta__ = {
"_edit_lock_": true
}

[node name="StaticBody2D2" type="StaticBody2D" parent="Path2D/car_path_follow" groups=[
"car",
]]

position = Vector2( 154.142, 0.898155 )
scale = Vector2( 0.161721, 0.117178 )
input_pickable = true
shapes/0/shape = SubResource( 52 )
shapes/0/transform = Transform2D( 3.18409, -5.21541e-08, 2.98023e-08, 3.17449, -0.251343, 0.646301 )
shapes/0/trigger = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="car3" type="Sprite" parent="Path2D/car_path_follow/StaticBody2D2"]

position = Vector2( -4.09009, 1.14368 )
rotation_deg = 90.0
scale = Vector2( 0.990265, 0.924191 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Path2D/car_path_follow/StaticBody2D2"]

position = Vector2( -0.251343, 0.646301 )
rotation_deg = -5.37896e-07
scale = Vector2( 3.18409, 3.17449 )
shape = SubResource( 52 )
trigger = false
_update_shape_index = 0
__meta__ = {
"_edit_lock_": true
}

[node name="Path2D1" type="Path2D" parent="."]

position = Vector2( 1.92957, -29.2332 )
curve = SubResource( 51 )

[node name="car_path_follow1" type="PathFollow2D" parent="Path2D1"]

position = Vector2( 114.878, 13.1073 )
rotation_deg = 179.505
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = false
cubic_interp = true
loop = true
lookahead = 4.0
script = ExtResource( 5 )

[node name="StaticBody2D3" type="StaticBody2D" parent="Path2D1/car_path_follow1" groups=[
"car",
]]

position = Vector2( 165.515, 0.390413 )
rotation_deg = -0.30479
scale = Vector2( 0.161721, 0.117178 )
input_pickable = true
shapes/0/shape = SubResource( 52 )
shapes/0/transform = Transform2D( 3.18409, -5.21541e-08, 2.98023e-08, 3.17449, -0.251343, 0.646301 )
shapes/0/trigger = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="car3" type="Sprite" parent="Path2D1/car_path_follow1/StaticBody2D3"]

position = Vector2( -4.09009, 1.14368 )
rotation_deg = 90.0
scale = Vector2( 0.990265, 0.924191 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Path2D1/car_path_follow1/StaticBody2D3"]

position = Vector2( -0.251343, 0.646301 )
rotation_deg = -5.37896e-07
scale = Vector2( 3.18409, 3.17449 )
shape = SubResource( 52 )
trigger = false
_update_shape_index = 0
__meta__ = {
"_edit_lock_": true
}

[node name="StaticBody2D4" type="StaticBody2D" parent="Path2D1/car_path_follow1" groups=[
"car",
]]

position = Vector2( 85.2568, 0.0691471 )
rotation_deg = -0.30479
scale = Vector2( 0.161721, 0.117178 )
input_pickable = true
shapes/0/shape = SubResource( 52 )
shapes/0/transform = Transform2D( 3.18409, -5.21541e-08, 2.98023e-08, 3.17449, -0.251343, 0.646301 )
shapes/0/trigger = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="car3" type="Sprite" parent="Path2D1/car_path_follow1/StaticBody2D4"]

position = Vector2( -4.09009, 1.14368 )
rotation_deg = 90.0
scale = Vector2( 0.990265, 0.924191 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Path2D1/car_path_follow1/StaticBody2D4"]

position = Vector2( -0.251343, 0.646301 )
rotation_deg = -5.37896e-07
scale = Vector2( 3.18409, 3.17449 )
shape = SubResource( 52 )
trigger = false
_update_shape_index = 0
__meta__ = {
"_edit_lock_": true
}

[node name="StaticBody2D6" type="StaticBody2D" parent="Path2D1/car_path_follow1" groups=[
"car",
]]

position = Vector2( 48.7708, 0.21492 )
rotation_deg = -0.30479
scale = Vector2( 0.161721, 0.117178 )
input_pickable = true
shapes/0/shape = SubResource( 52 )
shapes/0/transform = Transform2D( 3.18409, -5.21541e-08, 2.98023e-08, 3.17449, -0.251343, 0.646301 )
shapes/0/trigger = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="car3" type="Sprite" parent="Path2D1/car_path_follow1/StaticBody2D6"]

position = Vector2( -4.09009, 1.14368 )
rotation_deg = 90.0
scale = Vector2( 0.990265, 0.924191 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Path2D1/car_path_follow1/StaticBody2D6"]

position = Vector2( -0.251343, 0.646301 )
rotation_deg = -5.37896e-07
scale = Vector2( 3.18409, 3.17449 )
shape = SubResource( 52 )
trigger = false
_update_shape_index = 0
__meta__ = {
"_edit_lock_": true
}

[node name="StaticBody2D5" type="StaticBody2D" parent="Path2D1/car_path_follow1" groups=[
"car",
]]

position = Vector2( 23.485, 0.165485 )
rotation_deg = -0.30479
scale = Vector2( 0.161721, 0.117178 )
input_pickable = true
shapes/0/shape = SubResource( 52 )
shapes/0/transform = Transform2D( 3.18409, -5.21541e-08, 2.98023e-08, 3.17449, -0.251343, 0.646301 )
shapes/0/trigger = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="car3" type="Sprite" parent="Path2D1/car_path_follow1/StaticBody2D5"]

position = Vector2( -4.09009, 1.14368 )
rotation_deg = 90.0
scale = Vector2( 0.990265, 0.924191 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Path2D1/car_path_follow1/StaticBody2D5"]

position = Vector2( -0.251343, 0.646301 )
rotation_deg = -5.37896e-07
scale = Vector2( 3.18409, 3.17449 )
shape = SubResource( 52 )
trigger = false
_update_shape_index = 0
__meta__ = {
"_edit_lock_": true
}

[node name="Path2D2" type="Path2D" parent="."]

position = Vector2( 4.97898, -13.2518 )
curve = SubResource( 51 )
__meta__ = {
"_edit_lock_": true
}

[node name="car_path_follow1" type="PathFollow2D" parent="Path2D2"]

position = Vector2( 114.878, 13.1073 )
rotation_deg = 179.505
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = false
cubic_interp = true
loop = true
lookahead = 4.0
script = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="StaticBody2D6" type="StaticBody2D" parent="Path2D2/car_path_follow1" groups=[
"car",
]]

position = Vector2( 40.1899, 0.129478 )
rotation_deg = -0.30479
scale = Vector2( 0.161721, 0.117178 )
input_pickable = true
shapes/0/shape = SubResource( 52 )
shapes/0/transform = Transform2D( 3.18409, -5.21541e-08, 2.98023e-08, 3.17449, -0.251343, 0.646301 )
shapes/0/trigger = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="car3" type="Sprite" parent="Path2D2/car_path_follow1/StaticBody2D6"]

position = Vector2( -4.09009, 1.14368 )
rotation_deg = 90.0
scale = Vector2( 0.990265, 0.924191 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Path2D2/car_path_follow1/StaticBody2D6"]

position = Vector2( -0.251343, 0.646301 )
rotation_deg = -5.37896e-07
scale = Vector2( 3.18409, 3.17449 )
shape = SubResource( 52 )
trigger = false
_update_shape_index = 0
__meta__ = {
"_edit_lock_": true
}

[node name="StaticBody2D8" type="StaticBody2D" parent="Path2D2/car_path_follow1" groups=[
"car",
]]

position = Vector2( 155.829, 0.409504 )
rotation_deg = -0.30479
scale = Vector2( 0.161721, 0.117178 )
input_pickable = true
shapes/0/shape = SubResource( 52 )
shapes/0/transform = Transform2D( 3.18409, -5.21541e-08, 2.98023e-08, 3.17449, -0.251343, 0.646301 )
shapes/0/trigger = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="car3" type="Sprite" parent="Path2D2/car_path_follow1/StaticBody2D8"]

position = Vector2( -4.09009, 1.14368 )
rotation_deg = 90.0
scale = Vector2( 0.990265, 0.924191 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Path2D2/car_path_follow1/StaticBody2D8"]

position = Vector2( -0.251343, 0.646301 )
rotation_deg = -5.37896e-07
scale = Vector2( 3.18409, 3.17449 )
shape = SubResource( 52 )
trigger = false
_update_shape_index = 0
__meta__ = {
"_edit_lock_": true
}

[node name="StaticBody2D7" type="StaticBody2D" parent="Path2D2/car_path_follow1" groups=[
"car",
]]

position = Vector2( 182.074, 0.276917 )
rotation_deg = -0.30479
scale = Vector2( 0.161721, 0.117178 )
input_pickable = true
shapes/0/shape = SubResource( 52 )
shapes/0/transform = Transform2D( 3.18409, -5.21541e-08, 2.98023e-08, 3.17449, -0.251343, 0.646301 )
shapes/0/trigger = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="car3" type="Sprite" parent="Path2D2/car_path_follow1/StaticBody2D7"]

position = Vector2( -4.09009, 1.14368 )
rotation_deg = 90.0
scale = Vector2( 0.990265, 0.924191 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Path2D2/car_path_follow1/StaticBody2D7"]

position = Vector2( -0.251343, 0.646301 )
rotation_deg = -5.37896e-07
scale = Vector2( 3.18409, 3.17449 )
shape = SubResource( 52 )
trigger = false
_update_shape_index = 0
__meta__ = {
"_edit_lock_": true
}

[node name="day_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[node name="countdown_timer" type="RichTextLabel" parent="."]

rect_scale = Vector2( 0.1, 0.1 )
focus_ignore_mouse = false
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 2
margin_left = 21.0
margin_top = -31.0
margin_right = 120.0
margin_bottom = 62.0
custom_fonts/normal_font = SubResource( 50 )
custom_colors/default_color = Color( 0.623529, 0.823529, 1, 1 )
bbcode_enabled = false
bbcode_text = "000"
visible_characters = -1
percent_visible = 1.0

[node name="pixel" type="Node2D" parent="."]

position = Vector2( 7.26181, -11.9426 )
scale = Vector2( 1.20381, 1.49125 )

[node name="Sprite2" type="Sprite" parent="pixel"]

position = Vector2( -29.7575, 26.9569 )
scale = Vector2( 0.0122658, 0.0192379 )
texture = ExtResource( 7 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite3" type="Sprite" parent="pixel"]

position = Vector2( -30.2296, 25.3588 )
scale = Vector2( 0.0150664, 0.0240025 )
texture = ExtResource( 8 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite4" type="Sprite" parent="pixel"]

position = Vector2( -29.4914, 25.3354 )
scale = Vector2( 0.0150664, 0.0248898 )
texture = ExtResource( 8 )
centered = false
flip_h = true
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite1" type="Sprite" parent="pixel"]

position = Vector2( -30.1212, 25.4411 )
scale = Vector2( 0.0198682, 0.0238828 )
texture = ExtResource( 9 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="pixel"]

position = Vector2( -30.0405, 23.9862 )
scale = Vector2( 0.0182784, 0.0219022 )
texture = ExtResource( 3 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="pixel_button" type="LinkButton" parent="pixel"]

rect_scale = Vector2( 1, 0.4 )
focus_ignore_mouse = false
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 2
margin_left = -30.0
margin_top = 23.0
margin_right = -28.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 48 )
toggle_mode = false
enabled_focus_mode = 0
shortcut = null

[node name="success_background" type="Sprite" parent="."]

position = Vector2( -0.879974, -28.118 )
scale = Vector2( 0.0324119, 0.0341188 )
texture = ExtResource( 10 )

[node name="success_background5" type="Sprite" parent="success_background"]

position = Vector2( -46.2464, 30.223 )
scale = Vector2( 0.284134, 0.599403 )
texture = ExtResource( 11 )

[node name="success_background4" type="Sprite" parent="success_background"]

position = Vector2( -0.117371, 30.223 )
scale = Vector2( 0.284134, 0.599403 )
texture = ExtResource( 11 )

[node name="success_background3" type="Sprite" parent="success_background"]

position = Vector2( 46.0117, 30.223 )
scale = Vector2( 0.284134, 0.599403 )
texture = ExtResource( 11 )

[node name="points" type="RichTextLabel" parent="success_background"]

focus_ignore_mouse = false
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 2
margin_left = -60.0
margin_top = -83.0
margin_right = 69.0
margin_bottom = -28.0
custom_fonts/normal_font = SubResource( 50 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = false
bbcode_text = "Points"
visible_characters = -1
percent_visible = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="hundreths" type="RichTextLabel" parent="success_background"]

focus_ignore_mouse = false
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 2
margin_left = -60.0
margin_top = 4.0
margin_right = 1185.0
margin_bottom = 1331.0
custom_fonts/normal_font = SubResource( 50 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = false
bbcode_text = "8"
visible_characters = -1
percent_visible = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="tens" type="RichTextLabel" parent="success_background"]

focus_ignore_mouse = false
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 2
margin_left = -14.0
margin_top = 4.0
margin_right = 1231.0
margin_bottom = 1331.0
custom_fonts/normal_font = SubResource( 50 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = false
bbcode_text = "8"
visible_characters = -1
percent_visible = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="ones" type="RichTextLabel" parent="success_background"]

focus_ignore_mouse = false
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 2
margin_left = 34.0
margin_top = 4.0
margin_right = 1279.0
margin_bottom = 1331.0
custom_fonts/normal_font = SubResource( 50 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = false
bbcode_text = "8"
visible_characters = -1
percent_visible = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="StreamPlayer" type="AudioStreamPlayer" parent="."]

stream = ExtResource( 12 )
playing = false
loop = true
volume_db = 0.0
stream_autoplay = true
stream_paused = false
loop_restart_time = 0.0
buffering_ms = 500

[node name="menu" type="Node2D" parent="."]

pause_mode = 2
position = Vector2( 8.2048, 6.84428 )

[node name="Sprite" type="Sprite" parent="menu"]

position = Vector2( -8.39558, -9.98084 )
scale = Vector2( 0.0873445, 0.116672 )
texture = ExtResource( 13 )

[node name="points1" type="RichTextLabel" parent="menu"]

rect_scale = Vector2( 0.1, 0.1 )
focus_ignore_mouse = false
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 2
margin_left = -14.0
margin_top = -22.0
margin_right = 118.0
margin_bottom = 83.0
custom_fonts/normal_font = SubResource( 50 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = false
bbcode_text = "Sound"
visible_characters = -1
percent_visible = 1.0

[node name="sound_slider" type="HSlider" parent="menu"]

rect_scale = Vector2( 0.2, 0.2 )
focus_ignore_mouse = false
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 0
margin_left = -23.0
margin_top = -18.0
margin_right = 120.0
margin_bottom = -2.0
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 1.0
exp_edit = false
rounded = false
tick_count = 0
ticks_on_borders = true
focus_mode = 2

[node name="Sprite 2" type="Sprite" parent="menu"]

position = Vector2( -8.64352, -9.40746 )
scale = Vector2( 0.141758, 0.0624442 )
texture = ExtResource( 14 )

[node name="Sprite3" type="Sprite" parent="menu"]

position = Vector2( -8.39625, -0.385284 )
scale = Vector2( 0.147057, 0.060214 )
texture = ExtResource( 14 )

[node name="return_to_game" type="LinkButton" parent="menu"]

rect_scale = Vector2( 0.08, 0.1 )
focus_ignore_mouse = false
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 2
margin_left = -19.0
margin_top = -11.0
margin_right = 288.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 48 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "Return to Game"
underline = 2

[node name="return_to_village" type="LinkButton" parent="menu"]

rect_scale = Vector2( 0.08, 0.1 )
focus_ignore_mouse = false
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 2
margin_left = -20.0
margin_top = -2.0
margin_right = 303.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 48 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "Return to Endless"
underline = 2

[node name="are_you_sure" type="Node2D" parent="."]

pause_mode = 2
visible = false
position = Vector2( 11.663, 4.80891 )

[node name="Sprite" type="Sprite" parent="are_you_sure"]

position = Vector2( -11.126, -8.58667 )
scale = Vector2( 0.0676114, 0.100662 )
texture = ExtResource( 13 )

[node name="Sprite1" type="Sprite" parent="are_you_sure"]

position = Vector2( -4.64235, -1.24263 )
scale = Vector2( 0.0383925, 0.060319 )
texture = ExtResource( 14 )

[node name="Sprite2" type="Sprite" parent="are_you_sure"]

position = Vector2( -17.6635, -1.07617 )
scale = Vector2( 0.0329504, 0.0612983 )
texture = ExtResource( 14 )

[node name="points2" type="RichTextLabel" parent="are_you_sure"]

rect_scale = Vector2( 0.075, 0.075 )
focus_ignore_mouse = false
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 2
margin_left = -23.0
margin_top = -19.0
margin_right = 300.0
margin_bottom = 293.0
custom_fonts/normal_font = SubResource( 50 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = false
bbcode_text = "Are you sure you want to go back to the Endless Menu mode?"
visible_characters = -1
percent_visible = 1.0

[node name="yes_village" type="LinkButton" parent="are_you_sure"]

rect_scale = Vector2( 0.1, 0.1 )
focus_ignore_mouse = false
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 2
margin_left = -8.0
margin_top = -3.0
margin_right = 79.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 48 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "Yes"
underline = 2

[node name="no_village" type="LinkButton" parent="are_you_sure"]

rect_scale = Vector2( 0.1, 0.1 )
focus_ignore_mouse = false
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 2
margin_left = -20.0
margin_top = -3.0
margin_right = 39.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 48 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "No"
underline = 2

[node name="game_over" type="Node2D" parent="." groups=[
"game_over",
]]

visible = false

[node name="Sprite" type="Sprite" parent="game_over"]

position = Vector2( -0.373926, -0.906755 )
scale = Vector2( 0.0547495, 0.101805 )
texture = ExtResource( 13 )

[node name="Sprite1" type="Sprite" parent="game_over"]

position = Vector2( 5.23087, 8.81595 )
scale = Vector2( 0.0297171, 0.0491144 )
texture = ExtResource( 14 )

[node name="RichTextLabel" type="RichTextLabel" parent="game_over"]

rect_scale = Vector2( 0.2, 0.2 )
focus_ignore_mouse = false
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 2
margin_left = -10.0
margin_top = -11.0
margin_right = 113.0
margin_bottom = 115.0
custom_fonts/normal_font = SubResource( 50 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = false
bbcode_text = "GAME OVER!"
visible_characters = -1
percent_visible = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="game_over_button" type="LinkButton" parent="game_over"]

pause_mode = 2
rect_scale = Vector2( 0.1, 0.1 )
focus_ignore_mouse = false
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 2
margin_left = 3.0
margin_top = 7.0
margin_right = 46.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 48 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "OK"
underline = 2

[connection signal="timeout"  from="note_timer"  to="." method="_on_note_timer_timeout" binds=[  ]]

[connection signal="timeout"  from="day_timer"  to="." method="_on_day_timer_timeout" binds=[  ]]

[connection signal="button_down"  from="pixel/pixel_button"  to="." method="_on_pixel_button_button_down" binds=[  ]]

[connection signal="value_changed"  from="menu/sound_slider"  to="." method="_on_sound_slider_value_changed" binds=[  ]]

[connection signal="button_down"  from="menu/return_to_game"  to="." method="_on_return_to_game_button_down" binds=[  ]]

[connection signal="button_down"  from="menu/return_to_village"  to="." method="_on_return_to_village_button_down" binds=[  ]]

[connection signal="button_down"  from="are_you_sure/yes_village"  to="." method="_on_yes_village_button_down" binds=[  ]]

[connection signal="button_down"  from="are_you_sure/no_village"  to="." method="_on_no_village_button_down" binds=[  ]]

[connection signal="button_down"  from="game_over/game_over_button"  to="." method="_on_game_over_button_button_down" binds=[  ]]
